# assess_gtfs

./: .gitignore  .nojekyll  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.note  MANIFEST.in  README.md  _quarto.yml  index.html  index.qmd  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml
.github/workflows/: build-deploy.yml  build-pkg-manifest.yml  integration-tests.yml  python-package-linux.yml  python-package-mac.yml  python-package-windows.yml  quarto-render.yml
docs/: README.md
docs/_static/: custom.scss  styles.css
docs/explanation/: index.html  index.qmd
docs/explanation/calculate_tp/: index.qmd
docs/explanation/limitations/: index.qmd
docs/explanation/what_is_tp/: index.qmd
docs/getting_started/: index.html  index.qmd
docs/how_to/: index.html  index.qmd
docs/how_to/gtfs/: index.qmd
docs/how_to/osm/: index.qmd
docs/how_to/uc_pop/: index.qmd
docs/reference/: calendar.html  cleaners.html  defence.html  gtfs_utils.html  index.html  io.html  multi_validation.html  routes.html  validation.html  validators.html
docs/tutorials/: index.html  index.qmd
docs/tutorials/analyse_network/: index.qmd
docs/tutorials/gtfs/: index.qmd
docs/tutorials/metrics/: index.qmd
docs/tutorials/osm/: index.qmd
docs/tutorials/population/: index.qmd
docs/tutorials/urban_centre/: index.qmd
notebooks/e2e/: e2e_leeds.py  e2e_london.py  e2e_marseille.py  e2e_newport.py
notebooks/gtfs/: check_unmatched_id_warnings.py  stop_id_check.py
notebooks/metrics/: metrics_experiments.py
notebooks/osm/: 01-visualise-osm.py
notebooks/population/: grid_pop_experiment.py
notebooks/urban_centres/: poc_urban_centres.py
pipeline/gtfs/: 01-validate-gtfs.py
pipeline/osm/: 01-validate-osm.py
scripts/: prep-fixtures.py  prep-metrics-fixtures.py
site_libs/bootstrap/: bootstrap.min.css
src/assess_gtfs/: calendar.py  cleaners.py  gtfs_utils.py  multi_validation.py  routes.py  validation.py  validators.py
src/assess_gtfs/report/: __init__.py  report_utils.py
src/assess_gtfs/utils/: __init__.py  constants.py  defence.py  io.py
src/transport_performance/: analyse_network.py  metrics.py
src/transport_performance/_metrics/: tp_utils.py
src/transport_performance/gtfs/: calendar.py  cleaners.py  gtfs_utils.py  multi_validation.py  routes.py  validation.py
src/transport_performance/gtfs/report/: report_utils.py
src/transport_performance/osm/: __init__.py  osm_utils.py  validate_osm.py
src/transport_performance/population/: rasterpop.py  vectorpop.py
src/transport_performance/urban_centres/: __init__.py  raster_uc.py
src/transport_performance/utils/: constants.py  io.py  raster.py
tests/: test_analyse_network.py  test_calendar.py  test_cleaners.py  test_gtfs_utils.py  test_metrics.py  test_multi_validation.py  test_routes.py  test_setup.py  test_validation.py  test_validators.py
tests/_metrics/: metrics_fixtures.py  test_tp_utils.py
tests/analyse_network/: analyse_network_fixtures.py
tests/gtfs/: conftest.py  test_calendar.py  test_cleaners.py  test_gtfs_utils.py  test_multi_validation.py  test_routes.py  test_validation.py  test_validators.py
tests/osm/: test_osm_utils.py  test_validate_osm.py
tests/population/: test_rasterpop.py
tests/report/: test_report_utils.py
tests/urban_centres/: test_urban_centres.py
tests/utils/: test_defence.py  test_io.py  test_raster.py
