[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.sdist]
include = [
  "/src/assess_gtfs/*.py",
  "/tests",
  "/src/assess_gtfs/data/*",
]
[project]
name = "assess_gtfs"
authors = [
    {name = "Data Science Campus", email = "datasciencecampus@ons.gov.uk"}
]
description = "Inspect & validate General Transit Feed Specification"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.11"
version = "0.0.1"

dependencies = [
    'beautifulsoup4',
    'folium',
    'geopandas',
    'gtfs_kit==5.2.7',
    'haversine',
    'kaleido',
    'numpy==1.26.4',
    'pandas<2.1.0',
    'plotly',
    'pretty_html_table',
    'pyprojroot',
    'r5py',
    'requests',
    'tqdm',
]
[project.optional-dependencies]
test = [
    'coverage',
    'pre-commit',
    'pytest < 8.0.0',
    'pytest-lazy-fixture',
    'pytest-mock',
]
docs = [
    'ipykernel==6.23.1',
    'jupyterlab',
    'nbformat>=4.2.0',
    'quartodoc',
]

[tool.setuptools]
# This is true by default so this can be removed.
# Currently retaining this line before discussing with others whether or not
# we want to keep it for more clarity.
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Repository = "https://github.com/datasciencecampus/assess_gtfs"
"Bug tracker" = "https://github.com/datasciencecampus/assess_gtfs/issues"

# `coverage` configurations
[tool.coverage.run]
source = [
    "./src"
]
omit = ["**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:"
]

# `isort` configurations
[tool.isort]
profile = "black"
skip_glob = ["notebooks/*"]
line_length = 79

# `pytest` configurations
[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--doctest-modules"
]
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = [
    "./tests"
]
